--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ server.port=${PORT:5000}
 
 spring.devtools.restart.enabled=false
 spring.cache.type=none
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
